<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">La Cuenta</string>
    <string name="TxtBillTotal">Total de Cuenta</string>
    <string name="TxtTip">Propina</string>
    <string name="TxtPeople">Personas</string>
    <string name="BtnCalculate">Calcular</string>
    <string name="TxtResult">Resultado</string>
    <string name="StrExit">Salir</string>
    <string name="StrSettings">Configuraciones</string>
    <string name="settings_activity_txt_save_prefs">Guardar</string>
    <string name="settings_activity_txt_show_res_dialog">Dialogo</string>
    <string name="restart_application">Por favor reinicia la aplicacióon!!!</string>
    <string name="settings_activity_txt_say_result_out_loud">Gritar</string>
    <string name="main_activity_main_menu_save_expense_item">Guardar Gasto</string>
    <string name="record">Registro: </string>
    <string name="created">Creado</string>
    <string name="no_calculus_done_yet_msg">No se ha calculado ninguna cuenta aun.</string>
    <string name="splits_table_header_total">Total</string>
    <string name="splits_table_header_tip">Propina</string>
    <string name="splits_table_header_people">Personas</string>
    <string name="splits_table_header_date">Fecha</string>
    <string name="splits_table_header_result">Gasto</string>
    <string name="delete_msg">Borrar</string>
    <string name="splits_table_footer_total">Registros:</string>
    <string name="splits_table_footer_tips_text">Propinas:</string>
    <string name="splits_table_footer_expenses_text">Gastos Totales:</string>
    <string name="data_loaded_msg">Registros Cargados</string>
    <string name="loading_data_dialog_title">Cargando...</string>
    <string name="loading_data_dialog_msg">Cargando gastos</string>
    <string name="splits_table_row_empty">No se han encontrado datos!!!
<br></br>
Por favor redefina su busqueda</string>
    <string name="splits_main_menu_week_item">Semana</string>
    <string name="splits_main_menu_today_item">Hoy</string>
    <string name="splits_main_menu_month_item">Mes</string>
    <string name="main_activity_main_menu_expenses_item">Ver Gastos</string>
    <string name="splits_activity_main_menu_table_item">Tabla</string>
    <string name="splits_activity_main_menu_chart_item">Grafica</string>
    <string name="expenses_label">Gastos</string>
    <string name="money_sign">$</string>
    <string name="records_label">Registros</string>
    <string name="tips">Propinas</string>
    <string name="splits">Gastos</string>
    <string name="average">Promedio</string>
    <string name="settings_activity_txt_save_prefs_desc">Guardar los valores previos</string>
    <string name="settings_activity_txt_show_res_dialog_desc">Mostrar resultado en un dialogo</string>
    <string name="settings_activity_txt_say_out_loud_desc">Decir el resultado en voz alta</string>
    <string name="settings_activity_controls_pref_cat">Controles</string>
    <string name="settings_activity_result_pref_cat">Resultado</string>
    <string name="change_log_dialog_title">Cambios</string>
    <string name="str_ok">Aceptar</string>
    <string name="settings_activity_contact_developer">Contacta al Desarrollador</string>
    <string name="contact_developer_act_header">Por favor envia un comentario acerca de la aplicación, todos los comentarios son de ayuda para mejorar. <br></br>\n Si asi lo deseas puedes adjuntar tu nombre y tu correo electronico para ponernos en contacto con tigo. <br></br>\n Muchas Gracias</string>
    <string name="contact_developer_act_message">Mensaje</string>
    <string name="contact_developer_act_email">Correo Electronico:</string>
    <string name="contact_developer_act_name">Nombre:</string>
    <string name="str_cancel">Cancelar</string>
    <string name="settings_activity_developer_cat">Desarrollador</string>
    <string name="header_page_0">Calculadora</string>
    <string name="header_page_1">Resultados Previos</string>
    <string name="str_error_calling_save_expense">Error al guardar el gasto actual</string>
</resources>
