<?xml version="1.0" encoding="utf-8"?>
<TableRow
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:id="@+id/splits_table_header"
  android:background="#FFFFFF"
  android:layout_height="wrap_content">
  
  <TextView android:id="@+id/splits_table_header_total" 
   style="@style/splits_pair_row_text"
   android:text="@string/splits_table_header_total"/>
   
  <TextView android:id="@+id/splits_table_header_tip"
   style="@style/splits_pair_row_text"
   android:text="@string/splits_table_header_tip"/>
   
  <TextView android:id="@+id/splits_table_header_people"
   style="@style/splits_pair_row_text"
   android:text="@string/splits_table_header_people"/>
  
  <TextView android:id="@+id/splits_table_header_result"
   style="@style/splits_pair_row_text"
   android:text="@string/splits_table_header_result"/>
   
  <TextView android:id="@+id/splits_table_header_date"
   style="@style/splits_pair_row_text"
   android:text="@string/splits_table_header_date"/>
   
</TableRow>
