<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/splits_activity_main_menu_date_targets_group" android:menuCategory="secondary" android:checkableBehavior="single"><item android:id="@+id/splits_activity_main_menu_today_item" android:checkable="true" android:checked="false" android:icon="@drawable/calendar_1" android:title="@string/splits_main_menu_today_item"></item><item android:id="@+id/splits_activity_main_menu_week_item" android:checkable="true" android:checked="true" android:visible="true" android:enabled="true" android:title="@string/splits_main_menu_week_item" android:icon="@drawable/calendar_7"></item><item android:id="@+id/splits_activity_main_menu_month_item" android:checkable="true" android:checked="false" android:title="@string/splits_main_menu_month_item" android:icon="@drawable/calendar_31"></item></group>
	
	
	<group android:id="@+id/splits_activity_main_menu_display_targets_group" android:menuCategory="system" android:checkableBehavior="single"><item android:title="@string/splits_activity_main_menu_table_item" android:id="@+id/splits_activity_main_menu_table_item" android:icon="@drawable/table" android:checked="true" android:checkable="true"></item><item android:title="@string/splits_activity_main_menu_chart_item" android:id="@+id/splits_activity_main_menu_chart_item" android:icon="@drawable/chart"></item></group>
	
	
	
</menu>
