<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="match_parent"
	  android:background="#123456"
	  android:stretchColumns="0,1,2,3"
	  android:layout_height="wrap_content"
	  android:gravity="bottom">
	<TableRow>
	
	   <TextView style="@style/footer_text"
	   android:text="@string/splits_table_footer_total"/>
	   
	   <TextView style="@style/header_text"
	   android:text="@string/splits_table_footer_tips_text"/>
	   
	   <TextView style="@style/footer_text"
	   android:text="@string/splits_table_footer_expenses_text"/>
	
	</TableRow>
	
	<TableRow android:id="@+id/splits_table_header">
	  
	  <TextView android:id="@+id/splits_table_footer_records"
	   style="@style/footer_text"/>
	  
	  <TextView android:id="@+id/splits_table_footer_tip"
	   style="@style/footer_text"/>
	  
	  <TextView android:id="@+id/splits_table_footer_result"
	   style="@style/footer_text"/>
	      
	</TableRow>
	
</TableLayout>