<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"  android:background="@drawable/background">
	
	<TextView android:id="@+id/main_activity_txt_bill_total"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/TxtBillTotal" android:textColor="#000000" 
		android:textStyle="bold" android:inputType="textAutoComplete"	/>
		
	<EditText android:id="@+id/main_activity_edt_bill_total"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:layout_below="@id/main_activity_txt_bill_total" android:text="0"/>
	
	<TextView android:id="@+id/main_acivity_txt_tip" 
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:text="@string/TxtTip" android:textColor="#000000" 
		android:layout_below="@id/main_activity_edt_bill_total" android:textStyle="bold"/>
		
	<Spinner android:id="@+id/main_activity_spn_tip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:entries="@array/tip_options"
		android:prompt="@string/TxtTip" android:layout_below="@id/main_acivity_txt_tip" />
		
	<TextView android:id="@+id/main_acivity_txt_people" 
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:text="@string/TxtPeople" android:textColor="#000000"
		android:layout_below="@id/main_activity_spn_tip" android:textStyle="bold"/>
		
	<Spinner android:id="@+id/main_activity_spn_people" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:entries="@array/people_options" 
		android:prompt="@string/TxtPeople" android:layout_below="@id/main_acivity_txt_people"/>
		
	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:layout_below="@+id/main_activity_spn_people" android:stretchColumns="*">
		<TableRow>
			<TextView android:id="@+id/main_activity_txt_result" 	
			android:text="@string/TxtResult" android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textStyle="bold" android:textColor="#000000" />
			
			<Button android:id="@+id/main_activity_btn_calculate" 
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/BtnCalculate" />
		</TableRow>
		<TableRow >
		<org.blanco.lacuenta.misc.NumPad android:id="@+id/main_activity_num_pad"
		android:layout_span="2" />
		</TableRow>
	</TableLayout>
				
</RelativeLayout>
